feat: adjust the url to terraform provider gitsync
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/projects.templ
+++ b/templates/views/projects.templ
@@ -17,7 +17,7 @@ var ProjectsData = []struct {
 }{
 	{
 		Name: "Terraform Provider gitsync",
-		URL:  "https://github.com/ip812/terraform-provider-gitsync",
+		URL:  "https://registry.terraform.io/providers/ip812/gitsync/latest",
 		Description: `A custom Terraform provider that automatically syncs
 			non-sensitive values such as generated URLs, ARNs, and IDs into a
 			Git repository, storing them in a values.yaml file.`,
